--- a/index.html
+++ b/index.html
@@ -463,25 +463,25 @@
         <h2 class="section-title">Catálogo de Productos</h2>
         <div class="productos-grid">
           <div class="producto-card">
-            <img src="img/dulce.jpg" alt="Trufa de Chocolate Negro">
+            <img src="img1/dulce.jpg" alt="Trufa de Chocolate Negro">
             <h3>Trufa de Chocolate Negro</h3>
             <p class="precio">$8.50</p>
             <p class="stock">Stock: <span>24</span></p>
           </div>
           <div class="producto-card">
-            <img src="img/dulce2.jpg" alt="Macaron de Frambuesa">
+            <img src="img1/dulce2.jpg" alt="Macaron de Frambuesa">
             <h3>Macaron de Frambuesa</h3>
             <p class="precio">$6.00</p>
             <p class="stock">Stock: <span>18</span></p>
           </div>
           <div class="producto-card">
-            <img src="img/dulce3.jpg" alt="Caja Dorada de Caramelos">
+            <img src="img1/dulce3.jpg" alt="Caja Dorada de Caramelos">
             <h3>Caja Dorada de Caramelos</h3>
             <p class="precio">$12.00</p>
             <p class="stock">Stock: <span>10</span></p>
           </div>
           <div class="producto-card">
-            <img src="img/dulce4.jpg" alt="Bombón de Azafrán">
+            <img src="img1/dulce4.jpg" alt="Bombón de Azafrán">
             <h3>Bombón de Azafrán</h3>
             <p class="precio">$9.75</p>
             <p class="stock">Stock: <span>15</span></p>
